# sir-project-group-12

./: .env  .gitignore  README.md  agent.json  gesture_names.txt  pylock.toml  pyproject.toml  requirenments.txt
docs/: convo_design.md
emotion/: eye_pulse_animator.py  led_emotion_demo.py
flows/: SIR_exported_flow_cycle_1.json  SIR_exported_flow_cycle_2.json  SIR_exported_flow_cycle_3.json  SIR_exported_flow_cycle_4.json
nao_performance/: README.md  animations.py  end_script.py  leds.py  main.py  main1.py  music_player.py  opening_script.py  requirements.txt  snowwhite_demo.py  snowwhite_interactive.py  tts_client.py
request_dialogflow/: demo_nao_dialogflow_direct.py  demo_nao_processing.py  dialogflow_cx_direct_request.py  dialogflow_cx_request.md
server/: client.py  server.py
speech-audio/: client.py  demo_theatrical_preformance.py  test_background+nao.py  test_whisper_audio
src/: exported_flow_SIR_flow.json  nao_story.py
testCases/: Error handling - Greeting phrase in another language.json  Error handling - user asking the agent to order a cab.json  Error handling - user is asking the agent to order pizza.json  Happy path - Asking for a joke and then asking for another one .json  Happy path - Asking if they can test agent%2c if ready and to tell a joke%2c says %22haha%22 and that the agent is good .json  Happy path - Good evening%2c asking about age and boss.json  Happy path - Good morning and asking to be friends.json  Happy path - Good morning%2c user wish to get a hug.json  Happy path - Nice to see you%2c bored user.json  (+31 more)
venv_sic/: pyvenv.cfg
(+170 files in other folders)
