[project]
name = "sir-project-group-12"
version = "1.0.0"
description = "Social Intelligent Robotics Project - Vrije Universiteit Amsterdam"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "google-api-core>=2.28.1",
    "google-cloud-speech>=2.34.0",
    "pyaudio>=0.2.14",
    "social-interaction-cloud[dialogflow,dialogflow-cx]>=2.1.8",
]
